week 3 assignment done

--- a/02-express-tutorial/public/index.html
+++ b/02-express-tutorial/public/index.html
@@ -6,6 +6,13 @@
     <title>Xeniya</title>
 </head>
 <body>
-    <h1>Hello there!</h1>
+    <h1>Hello!</h1>
+    <h2>Let's start your Search!</h2>
+    <button id="myButton">SEARCH!</button>
+    <div id="result"></div>
+
+    <script src="script.js"></script>
+   
+
 </body>
 </html>
